--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "d3-ease": "^3.0.1",
-    "firebase": "^9.1.0",
+    "firebase": "^9.1.1",
     "formik": "^2.2.9",
     "react": "^17.0.2",
     "react-awesome-reveal": "^3.8.1",
     "react-dom": "^17.0.2",
+    "react-firebase-file-uploader": "^2.4.4",
     "react-move": "^6.5.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^4.0.3",
